post layout edited

--- a/index.html
+++ b/index.html
@@ -1,40 +1,9 @@
 ---
-layout: default
+layout: post
+title: A brand new post
+date: 2023-03-06
+mainimgsrc: /assets/img/image.jpg
 ---
 <div>
-    <h1>Jekyll with Bootstrap 5 sass</h1>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <h1>Jekyll with Bootstrap 56 sass</h1>
 </div>
